It is ugly but now it has a pretty clear layout

--- a/index.html
+++ b/index.html
@@ -267,6 +267,13 @@
     </div>
     <!-- Featured News Slider End -->
 
+    <div class="d-flex justify-content-center">
+        <div class="section-title">
+            <h4 class="m-0 text-uppercase font-weight-bold">Featured Posts on X</h4>
+        </div>
+        <blockquote class="twitter-tweet text-center"><p lang="es" dir="ltr">Se parecen tanto. <br>¿Acabará igual? <a href="https://t.co/iFemrL4xP2">pic.twitter.com/iFemrL4xP2</a></p>&mdash; Melquisedec Torres (@Melquisedec70) <a href="https://twitter.com/Melquisedec70/status/1820637362184982775?ref_src=twsrc%5Etfw">August 6, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+    </div>
+    
 
 
 
@@ -278,7 +285,7 @@
                 <p class="font-weight-medium"><i class="fa fa-map-marker-alt mr-2"></i>Chia, Cundinamarca</p>
                 <h6 class="mt-4 mb-3 text-white text-uppercase font-weight-bold">Follow Me</h6>
                 <div class="d-flex justify-content-start">
-                    <a class="btn btn-lg btn-secondary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-sm btn-primary" href="#"><img width="10%" src="./img/logo-black.png" alt="engineerClaz on X"></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 mb-5">
